--- a/index.html
+++ b/index.html
@@ -5,11 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+    <section id="first-section">
+        <div class="half-width">
+            <div id="intro-heading">
+                <h1>Stay Focused On <span class="orange-clr"> Mission 2022</span></h1>
+
+            </div>
+            <div>
+                <p>Hi! I am Ittihad Hasnat. Welcome to my web development world.
+                    In this very first of 2022 I have taken a mission of learning complete web development.
+                </p>
+                <a href="" class="link-btn">Explore Now</a>
+                <p>Scroll down to discover more about us</p>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="profile.jpg" alt="" class="profile-image">
+        </div>
+    </section>
+    <section>
+        <h2> My Mission In <span class="orange-clr">2022</span></h2>
+        <div class="display-flex">
+            <div class="one-third-width mission">
+                <img src="illustrator-1.png" alt="">
+                <h3>Mission</h3>
+                <p class="second-p">My mission is to keep learning. I have to unlock my limits in web development. I
+                    will learn whatever
+                    I need to be a complete web developer. </p>
+            </div>
+            <div class="one-third-width vision">
+                <img src="illustrator-2.png" alt="">
+                <h3>Vision</h3>
+                <p class="second-p">I believe every day is an opportunity to further perfect my strategy and spur myself
+                    on to achieve my
+                    personal goals.</p>
+            </div>
+            <div class="one-third-width goal">
+                <img src="illustrator-3.png" alt="">
+                <h3>Goal</h3>
+                <p class="second-p">My goal is to reach at the highest peak of web development knowledge so that I can
+                    create whatever
+                    website I want to and to get a job too.</p>
+
+            </div>
+
+        </div>
+    </section>
 
 </body>
-
-</html>
