--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section id="first-section">
+    <section class="section-flex">
         <div class="half-width">
             <div id="intro-heading">
                 <h1>Stay Focused On <span class="orange-clr"> Mission 2022</span></h1>
@@ -60,6 +60,19 @@
 
             </div>
 
+        </div>
+    </section>
+    <section class="section-flex">
+        <div class="half-width-section3img">
+            <img src="coding.jpg" alt="">
+        </div>
+        <div class="half-width-section3p">
+            <h2 id="third-heading">Develop Without Limits</h2>
+            <p>Web development is a branch of creativity. You have to be open minded and aware of all the possible ways
+                to create something beautiful. Learning about web development helps you to visualize what you have in
+                mind and to be limitless
+            </p>
+            <a href="">Read The Documentation</a>
         </div>
     </section>
 
