--- a/index.html
+++ b/index.html
@@ -88,5 +88,20 @@
             <img src="project.jpg" alt="">
         </div>
     </section>
+    <section class="section-flex">
+        <div class="last-section-image">
+            <img src="find-your-device.png" alt="" class="last">
+        </div>
+        <div class="half-width-section3p">
+            <h2 class="third-heading">Find Your <span class="orange-clr">Device</span></h2>
+            <p>What if you could find your device just by blowing a whiste?
+                Suppose you are searching for your mobile phone or laptop
+                or smartwatch in your room and you have a hurry,wouldn't it be nice if you could blow a whistle and your
+                device starts to ring or vibrate.Yeah I think we have a app for you. </p>
+            <a href="">App Features</a>
+        </div>
+
+    </section>
+
 
 </body>
