--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -88,17 +90,28 @@
             <img src="project.jpg" alt="">
         </div>
     </section>
-    <section class="section-flex">
-        <div class="last-section-image">
-            <img src="find-your-device.png" alt="" class="last">
+    <section>
+        <h2> Build a <span class="orange-clr">Useful application</span></h2>
+        <div class="section-flex">
+            <div class="last-section-image">
+                <img src="find-your-device.png" alt="" class="last">
+            </div>
+            <div class="half-width-section3p">
+                <h2 class="third-heading">Find Your <span class="orange-clr">Device</span></h2>
+                <p>What if you could find your device just by blowing a whiste?
+                    Suppose you are searching for your mobile phone or laptop
+                    or smartwatch in your room and you have a hurry,wouldn't it be nice if you could blow a whistle and
+                    your
+                    device starts to ring or vibrate.Yeah I think we have a app for you. </p>
+                <a href="">App Features</a>
+            </div>
         </div>
-        <div class="half-width-section3p">
-            <h2 class="third-heading">Find Your <span class="orange-clr">Device</span></h2>
-            <p>What if you could find your device just by blowing a whiste?
-                Suppose you are searching for your mobile phone or laptop
-                or smartwatch in your room and you have a hurry,wouldn't it be nice if you could blow a whistle and your
-                device starts to ring or vibrate.Yeah I think we have a app for you. </p>
-            <a href="">App Features</a>
+
+    </section>
+    <section class="conclusion-and-footer">
+        <p class="conclusion-p">MISSION <span class="red-clr">2022</span></p>
+        <div class="conclusion-f">
+            <footer>Hardwork, Perseverence and Determination for 2022 </footer>
         </div>
 
     </section>
