--- a/index.html
+++ b/index.html
@@ -67,12 +67,25 @@
             <img src="coding.jpg" alt="">
         </div>
         <div class="half-width-section3p">
-            <h2 id="third-heading">Develop Without Limits</h2>
+            <h2 class="third-heading">Develop Without Limits</h2>
             <p>Web development is a branch of creativity. You have to be open minded and aware of all the possible ways
                 to create something beautiful. Learning about web development helps you to visualize what you have in
                 mind and to be limitless
             </p>
             <a href="">Read The Documentation</a>
+        </div>
+    </section>
+    <section class="section-flex">
+        <div class="half-width-section3p fourth-section">
+            <h2 class="third-heading">Know Our Gloal Community</h2>
+            <p>In the sector of eb development you will need community in which people discuss about problems and
+                solutions in the way of learning web development. We have developed a good community of this type.
+                Read the document below for more information.
+            </p>
+            <a href="">Read The Documentation</a>
+        </div>
+        <div class="half-width-section4img">
+            <img src="project.jpg" alt="">
         </div>
     </section>
 
